; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/nimble/esp-hci/src/extr_esp_nimble_hci.c_esp_nimble_hci_and_controller_deinit.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/nimble/esp-hci/src/extr_esp_nimble_hci.c_esp_nimble_hci_and_controller_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_nimble_hci_and_controller_deinit() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @esp_nimble_hci_deinit()
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @ESP_OK, align 4
  %6 = icmp ne i32 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = load i32, i32* %2, align 4
  store i32 %8, i32* %1, align 4
  br label %25

9:                                                ; preds = %0
  %10 = call i32 (...) @esp_bt_controller_disable()
  store i32 %10, i32* %2, align 4
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @ESP_OK, align 4
  %13 = icmp ne i32 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %9
  %15 = load i32, i32* %2, align 4
  store i32 %15, i32* %1, align 4
  br label %25

16:                                               ; preds = %9
  %17 = call i32 (...) @esp_bt_controller_deinit()
  store i32 %17, i32* %2, align 4
  %18 = load i32, i32* %2, align 4
  %19 = load i32, i32* @ESP_OK, align 4
  %20 = icmp ne i32 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %16
  %22 = load i32, i32* %2, align 4
  store i32 %22, i32* %1, align 4
  br label %25

23:                                               ; preds = %16
  %24 = load i32, i32* @ESP_OK, align 4
  store i32 %24, i32* %1, align 4
  br label %25

25:                                               ; preds = %23, %21, %14, %7
  %26 = load i32, i32* %1, align 4
  ret i32 %26
}

declare dso_local i32 @esp_nimble_hci_deinit(...) #1

declare dso_local i32 @esp_bt_controller_disable(...) #1

declare dso_local i32 @esp_bt_controller_deinit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
